# mistral-on-aws

./: .gitignore  404.html  Pixtral_comparative_analysis.ipynb  README.md  Transition_from_openai_to_mistral.ipynb  index.html  mkdocs.yml
MCP/: AirbnbFinder.ipynb  Location_based_recommendations.ipynb
Ministral/: Ministral_Capabilities.ipynb  Strands_Agents_Mistral.ipynb
Mistral Large 2/: Introduction_to_prompt_chaining_Mistral_Large.ipynb  Language_Comparison_Large_1_2.ipynb  Large_2_Release_Highlights.ipynb  Mistral_Large_2_Capabilities.ipynb  ReAct_LlamaIndex_Large 2.py
Mistral Large 3/: Mistral_Large_3_Capabilities.ipynb
Mistral NeMo/: NeMo_comparative_analysis.ipynb
Mistral OCR/: Mistral-OCR-SageMaker-Deployment-example.ipynb
Mistral Voxtral/: Voxtral_Bedrock.ipynb
Pixtral-samples/: Pixtral_capabilities.ipynb  Pixtral_comparative_analysis.ipynb  Vision_QA_Agent_with_Pixtral_and_LlamaIndex.ipynb
Prompt Engineering/: 00_setup.ipynb  01_basic_prompt_structure.ipynb  02_role_and_purpose.ipynb  03_clear_structured_instructions.ipynb  04_formatting_and_delimiters.ipynb  05_few_shot_prompting.ipynb  06_controlling_output_format.ipynb  07_step_by_step_reasoning.ipynb  08_reducing_hallucinations.ipynb  09_putting_it_all_together.ipynb
Workshops/aws-summit-paris-2025-agentic/: .gitignore  README.md  aws_llm.py  notebook.ipynb  pyproject.toml  tools_demo.json  tools_utils.py  utils.py
Workshops/aws-summit-paris-2025-agentic/assets/: velib_stations.json
docs/: index.md  notebooks.md
notebooks/: ._finetune-mistral-7b-with-dolly-and-qlora.ipynb  index.html  (+28 more)
(+180 files in other folders)
